--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # major 버전 업은 하위 호완성 유지 X
   # ^ 사용 시 pub upgrade 으로 자동 버전 업그레이드
   english_words: ^4.0.0
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_test:
