--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,22 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - images/
+    - images/icon/
+    - assets/text/
+
+  # font 를 별도로 등록하고 Text 에서 fontFamily 로 이름만 지칭해서 적용
+  # family 에 주는 이름은 적용 시 식별할 개발자가 지정하는 임의의 이름
+  fonts:
+    - family: myFontName
+      fonts:
+        - asset: assets/fonts/NanumBrushScript-Regular.ttf
+          weight: 700
+    - family: myBasicFontName
+      fonts:
+        - asset: assets/fonts/SingleDay-Regular.ttf
+          weight: 300
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
