--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # ^ 사용 시 pub upgrade 으로 자동 버전 업그레이드
   english_words: ^4.0.0
   provider: ^6.1.4
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
