--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.1.4
   google_fonts: ^6.1.0
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
