--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.1.4
   google_fonts: ^6.1.0
   font_awesome_flutter: ^10.8.0
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
